# TPhomeworks

task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h
task4/src/02-tree/: Tree.cpp
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp
